# bakeoff-results

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  HUMANS.md  README.md  SECURITY.md  TODO.md  pyproject.toml  signers.example.yaml  signers.yaml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  result_dispute.md
.github/workflows/: ci.yml
site/: index.html  index.json
src/bakeoff_results/: __init__.py  build_index.py  validate.py
submissions/bastion-synthetic/synth-llama31-8b-rtx4090-20260519/: manifest.json  result.json  summary.md
submissions/bastion-synthetic/synth-mixtral-8x7b-amd-strix-20260519/: manifest.json  result.json  summary.md
submissions/bastion-synthetic/synth-multi-model-incomplete-20260604/: manifest.json  result.json  summary.md
submissions/bastion-synthetic/synth-phi35-mini-amd-strix-20260519/: manifest.json  result.json  summary.md
tests/: test_bundle_tools.py
