[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bakeoff-results"
version = "0.1.0"
description = "Validation and static index tooling for private bakeoff result bundles."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
bakeoff-results-validate = "bakeoff_results.validate:main"
bakeoff-results-build-index = "bakeoff_results.build_index:main"

[tool.setuptools.packages.find]
where = ["src"]
